fix avatar overlay z-index

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,9 +1,8 @@
 .profile__avatar {
-  position: relative;
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  z-index: 1;
+  z-index: 0;
 }
 
 .profile__avatar:hover {
