--- a/src/blocks/profile/__overlay/profile__overlay.css
+++ b/src/blocks/profile/__overlay/profile__overlay.css
@@ -4,5 +4,5 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 47px;
-  z-index: 0;
+  z-index: -1;
 }
